Release Changelog for VanasKoS

5.00:
- Fix importer error for unknown areas
- Fix error when joining party members from your realm
- Color KoS players yellow by default (some places still had magenta)
- Add PvP defeat method logging options
- Minor cleanups to configuration menu
- Fix adding to player lists from PvP stats list
- Fix error on death with no recent PvP
- Add tooltip info for pvp log event list
- Fix enable/disable of event map without reloading UI
- Only update last seen list every 10 seconds (if being shown)
- Fix coloring entries and tooltips in friends list
- Remove a couple of UI taints
- Add ability to remove zones from pvp stats list
- Fix option to disable pvp events in arena/bg
- Fix warning window mouseover
- Fix import of player data and PvP stats
- Speed improvements for large lists
- Fix pvp log list sorting with nil entries
- Fix the timer to update the last seen list

5.00-beta:
- Big overhaul for really broken features with some pretty major changes
-  Updated EventMap to use new API
- All player entries are now stored as name-realm (including local realm)
- All guild entries are now stored as <guild> (no realm data
- KOS, Hate, Nice lists are now per faction instead of per faction/realm
- DataGatherer and PvPDataGatherer are now global instead of per realm
- Import old data (manually right now to give users a chance to backup first)
- Convert old AreaID to using UiMapIDs
- Fixed Chatframe notifications for hate/nice list.
-  Fixed checks for being in a city
- Style cleanup
- Fix error with NPC party members as happens in some missions
- Fix bugs in combat log monitoring
- Add all the most recent attackers (<5s) to pvplog on death
- Add conversion from old pvpstats to importer
- Remove old pvp stats
- Add list to show detailed pvp log
- Add options for handling war mode and pvp flags
- Fix notifier for Party API changes
- Add < > surrounding guild name in guild kos list
- Change color of guild kos entries with an owner specified